contrast fixes

--- a/css/post.css
+++ b/css/post.css
@@ -75,7 +75,7 @@ time {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  color: #828282;
+  color: #252525;
   padding: 0em 0em 1.2em 0em;
 }
 .post {
